--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y \
+          texlive-xetex\ 
           texlive-latex-base \
           texlive-latex-extra \
           texlive-latex-recommended \
