modify the deploy.yml again

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,12 +20,11 @@ jobs:
       with:
         fetch-depth: 0  # 获取所有历史，便于获取文件修改时间
 
-    # 步骤2: 安装 LaTeX 环境
+    # 步骤2: 安装完整的 LaTeX 环境（包含 xelatex）
     - name: Setup LaTeX environment
       run: |
         sudo apt-get update
         sudo apt-get install -y \
-          texlive-xetex\ 
           texlive-latex-base \
           texlive-latex-extra \
           texlive-latex-recommended \
@@ -33,12 +32,16 @@ jobs:
           texlive-fonts-extra \
           texlive-lang-chinese \
           texlive-science \
-          texlive-pictures
+          texlive-pictures \
+          texlive-xetex  # 添加 xelatex 支持
 
     # 步骤3: 编译所有笔记
     - name: Compile all notes
       run: |
         mkdir -p $BUILD_DIR/notes
+        
+        # 设置 LaTeX 搜索路径（在项目根目录设置一次）
+        export TEXINPUTS="./styles:"
         
         # 查找所有笔记主文件并编译
         find notes -name "main.tex" -type f | while read texfile; do
@@ -49,8 +52,8 @@ jobs:
           # 进入笔记目录编译
           cd "$dir"
           
-          # 设置搜索路径并编译（使用 xelatex，云端环境已配置好中文）
-          TEXINPUTS="../../styles:" xelatex -interaction=nonstopmode main.tex
+          # 使用 pdflatex 而不是 xelatex（更稳定，已配置好中文）
+          pdflatex -interaction=nonstopmode main.tex
           
           # 检查是否编译成功
           if [ -f "main.pdf" ]; then
@@ -58,13 +61,18 @@ jobs:
             echo "✅ 成功: $name"
           else
             echo "❌ 失败: $name"
+            # 输出错误信息
+            if [ -f "main.log" ]; then
+              echo "=== 错误日志 ==="
+              tail -20 main.log
+            fi
           fi
           
           # 返回项目根目录
           cd - > /dev/null
         done
 
-    # 步骤4: 生成索引页面
+    # 步骤4: 生成索引页面（保持不变）
     - name: Generate index page
       run: |
         cat > $BUILD_DIR/index.html << 'EOF'
